--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chartscss@1.0.0/dist/charts.min.css">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
 </head>
 
 <body data-sveltekit-preload-data="hover">
