--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,11 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chartscss@1.0.0/dist/charts.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
+	<link rel="preload" href="/global.css" as="style" onload="this.rel='stylesheet'">
+	<noscript>
+		<link rel="stylesheet" href="/global.css">
+	</noscript>
 </head>
 
 <body data-sveltekit-preload-data="hover">
